...
        app:iconSize="25dp"
        app:layout_constraintBottom_toBottomOf="@+id/searchViewInputBackground"
        app:layout_constraintEnd_toEndOf="@+id/searchViewInputBackground"
        app:layout_constraintTop_toTopOf="@+id/searchViewInputBackground" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/searchViewInput"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="70dp"
        android:background="@android:color/transparent"
        android:hint="Search Quotes..."
...
        app:layout_constraintBottom_toBottomOf="@+id/searchViewInputBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/searchViewInputBackground" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:scrollbars="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
...
