...
                    android:textColor="?attr/colorSurfaceInverse"
                    android:fontFamily="@font/roboto_light"
                    android:textSize="13dp" />
            </TableLayout>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/ruleCard"
                style="?attr/materialCardViewOutlinedStyle"
                app:cardBackgroundColor="?attr/colorPrimaryContainer"
                app:strokeWidth="0dp"
                app:strokeColor="?attr/colorPrimary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                        android:fontFamily="@font/roboto_bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/ruleOfDayQuote"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="30dp"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="16dp"
...
