...
                android:textColor="?attr/colorOnSurfaceVariant"
                app:icon="@drawable/baseline_format_quote_24"
                app:iconTint="?attr/colorOnSurfaceVariant" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_myRules"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:scrollbars="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myRulesCategory" />
...
